--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ statsmodels = "^0.13.0"
 pyarrow = "^12.0.0"
 dvc-gdrive = "^2.19.0"
 ruff = "^0.0.285"
+dvclive = "^2.15.0"
 
 
 [tool.poetry.group.test.dependencies]
